<resources>
    <string name="app_name">my_activity</string>\
    <string name="zikbang_msg1">간편하게 로그인하고</string>
    <string name="zikbang_msg2">다양한 서비스를 이용하세요.</string>
    <string name="ktk_start">카카오톡으로 시작</string>
    <string name="ge_start">Google로 시작</string>
    <string name="ae_start">Apple로 시작</string>
    <string name="fk_start">Facebook로 시작</string>
    <string name="email_info"><u>이메일로 로그인하기</u></string>
    <string name="tro">Trost.</string>
    <string name="tro_info">마음도 관리가 필요하니까</string>
    <string name="apple_btn_title">Apple</string>
    <string name="facebook_btn_title">Facebook</string>
    <string name="naver_btn_title">naver</string>
    <string name="kakaotalk_btn_title">Kakaotalk</string>
    <string name="log_info">이메일 회원 가입  |  이메일 로그인</string>
    <string name="set_tv">내 설정</string>
    <string name="userlog_intro">제리아빠님, google로 로그인했어요</string>
    <string name="address_info"><b>주소 정보</b></string>
    <string name="address_info_name">서울시 광진구 중곡동</string>
    <string name="modify">수정하기</string>
    <string name="alarm">알림</string>
    <string name="feed_alarm">피드 알림</string>
    <string name="msg_alarm">메세지 알림</string>
    <string name="friend_alarm">친구 활동 알림</string>
    <string name="marketing_alarm">마케팅 정보 알림</string>
    <string name="my_neighbourhood_set"><b>내 이웃 비공개</b></string>
    <string name="app_info_name">앱 정보</string>
    <string name="app_version">1.2.7</string>
    <string name="logout">로그아웃</string>
    <string name="Withdrawal_info">회원탈퇴</string>
    <string name="update_event_name">업데이트/이벤트 안내</string>
    <string name="event_title">오늘의 미션</string>
    <string name="misson_str">우리 댕댕이에 도움되는 날씨에 관련된 인증샷이나 \n꿀팁을 올려주세요\n(ex 여름나기, 장마, 비올 때, 꽃과 함께, 눈 오는 날)</string>
    <string name="time_attack_event_title">타임어택 이벤트</string>
    <string name="time_attack_event_info">우리 동네 반려인들과 더 친해지고 다양한 컨텐츠에 \n참여하는 언제 열릴지 모르는 타임어택 이벤트입니다.\n참여하신 반려인들중 추첨을 통해 총 15만원 상당의 \n상품권을 드립니다! 많은 참여 부탁드립니다~</string>
    <string name="participate_method_title">참여방법</string>
    <string name="participate_method_text">1. 무작위 시간/날짜에 타임어택 이벤트가 출몰해요 \n2. 배너, 팝업에 타임어택 이벤트가 뜨면 오늘의 미션을\n&#160;&#160;&#160;&#160;수행하시면 자동으로 이벤트 참여되요\n3. 오전 9시~오후 11:59분까지만 이벤트가 유효해요\n4. 추첨을 통해 당첨이 되면 참여해주신 해당 유저에게\n&#160;&#160;&#160;&#160;기프티콘 혹은 상품권을 보내드려요!</string>
    <string name="goods_name"><b>상품</b></string>
    <string name="goods_info">이벤트 참여한 유저들중 추첨을 통해 3분에게 \n5만원 상품권을 증정합니다!</string>
    <string name="timeAttack_btn">타임어택 참여하기</string>
</resources>