<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/zikbang_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="350dp"
        android:src="@drawable/zikbang"
        />

    <TextView
        android:id="@+id/info_msg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/zikbang_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/zikbang_msg1"
        android:textSize="20sp"
        android:fontFamily="@font/noto_re"
        />

    <TextView
        android:id="@+id/info_msg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/info_msg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/zikbang_msg2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/noto_re"
        android:layout_marginBottom="465dp"
        />

    <android.widget.Button
        android:id="@+id/kakaotalk_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/info_msg2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="300dp"
        android:background="@drawable/kakaotalk_rec"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/ktk_start"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/noto_re"
        />

    <android.widget.Button
        android:id="@+id/google_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/kakaotalk_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/google_rec"
        tools:ignore="SpeakableTextPresentCheck"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="250dp"
        android:text="@string/ge_start"
        android:textAllCaps="false"
        android:fontFamily="@font/noto_re"
        android:textAlignment="center"
        android:gravity="center"
        />

    <android.widget.Button
        android:id="@+id/apple_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/google_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/facebook_rec"
        android:text="@string/ae_start"
        android:textAllCaps="false"
        android:layout_marginBottom="180dp"
        android:fontFamily="@font/noto_re"
        android:textAlignment="center"
        android:gravity="center"
        />

    <android.widget.Button
        android:id="@+id/facebook_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/apple_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/facebook_rec"
        android:text="@string/fk_start"
        android:textAllCaps="false"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/noto_re"
        android:textAlignment="center"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/email_info"
        android:fontFamily="@font/noto_re"
        android:textSize="10sp"
        android:textColor="@color/gray"
        android:layout_marginBottom="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>